fix: some text contrast

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  color: #666;
+  color: #8b8b8b;
   font-size: small;
 }
 
