--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
   font-weight: 400;
 
   color-scheme: dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #eee;
   background-color: #242424;
 
   font-synthesis: none;
@@ -14,6 +14,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+html {
+  color: #eee;
+  background-color: #242424;
 }
 
 a {
